--- a/html_workspace/MayProject/sidebar.css
+++ b/html_workspace/MayProject/sidebar.css
@@ -2,7 +2,7 @@
 .sub-menu {
     position: fixed;
     width: 200px;
-    height: 100%;
+    height: 250px;
     transition: 0.5s;
 }
 .sub-menu ul {
@@ -12,16 +12,23 @@
 }
 .sub-menu{
     width: 0;
-    height: 100%;
+    height: 250px;
     overflow: hidden;
     background: rgb(255, 241, 204);
     transition-duration: 0.5s;
+    border-radius: 0px 20px 20px 0px;
 }
 .side-nav-left:hover > .sub-menu{
-    height: 100%;
+    height: 250px;
     width: 300px;
     overflow: hidden
 }
 .sub-menu-list li {
     line-height: 3rem;
+}
+.sub-menu-list a {
+    font-family: 'Arial', sans-serif;
+    text-decoration: none;
+    color: black;
+    margin-left: 20px;
 }
