--- a/html_workspace/MayProject/sidebar.css
+++ b/html_workspace/MayProject/sidebar.css
@@ -1,8 +1,8 @@
-/* SHOP - 서브메뉴 */
-.sub-menu {
+/* OLD STYLE */
+/* .sub-menu {
     position: fixed;
     width: 200px;
-    height: 250px;
+    height: 200px;
     transition: 0.5s;
 }
 .sub-menu ul {
@@ -12,14 +12,14 @@
 }
 .sub-menu{
     width: 0;
-    height: 250px;
+    height: 200px;
     overflow: hidden;
     background: rgb(255, 241, 204);
     transition-duration: 0.5s;
     border-radius: 0px 20px 20px 0px;
 }
 .side-nav-left:hover > .sub-menu{
-    height: 250px;
+    height: 200px;
     width: 300px;
     overflow: hidden
 }
@@ -31,4 +31,127 @@
     text-decoration: none;
     color: black;
     margin-left: 20px;
+} */
+
+/* NEW STYLE */
+
+#side-nav {
+    overflow: hidden;
+    position: relative;
+    transform: translateX(-300px);
+    height: 100%;
+    width: 400px;
+    transition: all 800ms cubic-bezier(.8, 0, .33, 1);
+    border-radius: 0% 0% 100% 50%;
+}
+
+#side-nav.nav-open {
+    transform: translateX(0px);
+    border-radius: 0% 0% 0% 0%;
+    background: rgba(255, 255, 255, 0.6);
+}
+
+/* 사이드바 버튼 */
+nav .menu-btn {
+    position: absolute;
+    /* top: 10%;
+    right: 5%; */
+    padding: 0;
+    width: 30px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+nav .menu-btn .line {
+    padding: 0;
+    width: 30px;
+    background: black;
+    height: 2px;
+    margin: 5px 0;
+    transition: all 700ms cubic-bezier(.9, 0, .33, 1);
+}
+
+nav .menu-btn .line.line--1 {
+    width: 30px;
+    transform: rotate(0) translateY(0);
+}
+
+nav .menu-btn .line.line--1.line-cross {
+    width: 30px;
+    transform: rotate(45deg) translateY(10px);
+   background: rgba(0,0,0,0.6);
+}
+
+nav .menu-btn .line.line--2 {
+    width: 28px;
+    transform: translateX(0);
+}
+
+nav .menu-btn .line.line--2.line-fade-out {
+    width: 28px;
+    transform: translate(30px);
+    opacity: 0;
+}
+
+nav .menu-btn .line.line--3 {
+    width: 20px;
+    transform: rotate(0) translateY(0);
+}
+
+nav .menu-btn .line.line--3.line-cross {
+    width: 30px;
+    transform: rotate(-45deg) translateY(-10px);
+   background: rgba(0,0,0,0.6);
+}
+
+/* 사이드바 리스트 */
+nav .side-nav-left {
+    position: absolute;
+    top: 120px;
+    left: 30%;
+    width: auto;
+    height: auto;
+    background-color: #e6d7bb;
+    border-radius: 15px;
+    box-shadow: 2px 4px 12px rgba(116, 116, 116, 0.7);
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-300%);
+    opacity: 0;
+    transition: all 600ms ease;
+    z-index: 10;
+}
+
+nav .side-nav-left.fade-in {
+    opacity: 1;
+    transform: translateX(-90%);
+}
+
+nav .side-nav-left .link {
+    margin: 20px 0;
+    text-decoration: none;
+    font-family: sans-serif;
+    color: rgba(0,0,0,0.9);
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 10px;
+    transition: all 300ms cubic-bezier(.9, 0, .33, 1);
+}
+
+nav .side-nav-left .link:hover {
+    color: rgba(0, 0, 0, .5);
+}
+
+a{
+  margin: 0 20px;
+  color: black;
+  font-size: 20px;
+  transition: all 400ms ease;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #f1ecdf;
 }
