--- a/html_workspace/MayProject/css/cal.css
+++ b/html_workspace/MayProject/css/cal.css
@@ -129,33 +129,33 @@ p {
 /* 하단 날짜 초기화 버튼 */
 .now {
     width: 100%;
-    height: 50px;
+    height: 70px;
 }
 
 
 #btnNow {
-  position: fixed;
+  /* position: fixed; */
 
-  width: 60px;
-  height: 60px;
-  border: 3px solid #ffdf7f; /* 연노랑 테두리 */
-  border-radius: 50%;
-  background: linear-gradient(145deg, #fff9d1, #ffe87d); /* 연노랑 입체 배경 */
-  font-size: 26px;
-  cursor: pointer;
-  box-shadow:
-    3px 3px 6px rgba(0, 0, 0, 0.1),
-    inset -2px -2px 4px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 4px rgba(255, 204, 102, 0.4);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease;
+    width: 60px;
+    height: 60px;
+    border: 3px solid #ffdf7f; /* 연노랑 테두리 */
+    border-radius: 50%;
+    background: linear-gradient(145deg, #fff9d1, #ffe87d); /* 연노랑 입체 배경 */
+    font-size: 26px;
+    cursor: pointer;
+    box-shadow:
+        3px 3px 6px rgba(0, 0, 0, 0.1),
+        inset -2px -2px 4px rgba(255, 255, 255, 0.6),
+        inset 2px 2px 4px rgba(255, 204, 102, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
 }
 
 #btnNow:hover {
-  transform: scale(1.1);
-  background-color: #ffe87d;
+    transform: scale(1.1);
+    background-color: #ffe87d;
 }
 
 
@@ -163,26 +163,29 @@ p {
 
 
 #session {
-  margin-top: 40px;
-  padding: 20px;
-  background-color: #fffef2;
-  border: 2px dashed #ffe87d;
-  border-radius: 15px;
-  /* width: 700px; */
-  max-width: 700px;
+    width: 98%;
+    margin-bottom: 30px;
+    padding: 15px;  
+    margin-top: 40px;
+    padding: 20px;
+    border: 2px dashed #ffe87d;
+    background-color: #fffef2;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    max-width: 700px;
 }
 
 #session h2 {
-  font-size: 1.4rem;
-  margin-bottom: 10px;
-  color: #333;
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    color: #333;
 }
 
 .emotion-log-entry {
-  background-color: #fff8cc;
-  border: 1px solid #ffec99;
-  border-radius: 10px;
-  padding: 10px 15px;
-  margin-bottom: 10px;
-  box-shadow: 1px 1px 5px rgba(0,0,0,0.05);
+    background-color: #fff8cc;
+    border: 1px solid #ffec99;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.05);
 }
