--- a/html_workspace/MayProject/css/style.css
+++ b/html_workspace/MayProject/css/style.css
@@ -70,6 +70,11 @@ button {
     font-weight: bold;
 }
 
+#clear {
+    width: 700px;
+    padding: 15px;
+}
+
 .joy { background: #ffd3e2; color: #8e3e63; }
 .sadness { background: #d0e8ff; color: #3e5f8e; }
 .anger { background: #ffdddd; color: #8e3e3e; }
