--- a/html_workspace/MayProject/css/game.css
+++ b/html_workspace/MayProject/css/game.css
@@ -39,7 +39,7 @@ h1 {
     background-color: #ffdde4;
     flex-direction: column;
     overflow: hidden;
-    box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.12);
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.12);
 }
 
 /*-------------------------------------------------------------
@@ -51,16 +51,24 @@ h1 {
     align-items: center;
     /* padding: 10px; */
 }
-
 #game-top,  #game-bottom {
     /* width: 700px; */
     height: 425px;
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
+    background: linear-gradient(to bottom right, #d4fcd4, #a6e3a6); /* 부드러운 밝기 차이 */
+     /* 입체감 주는 그림자 */
+    box-shadow: 
+        inset 2px 2px 6px rgba(255, 255, 255, 0.6), /* 안쪽 밝은 빛 */
+        inset -2px -2px 6px rgba(0, 0, 0, 0.05),   /* 안쪽 어두운 그림자 */
+        6px 6px 15px rgba(0, 0, 0, 0.12);          /* 바깥 그림자 */
 }
 #game-middle {
     /* width: 700px; */
     height: 50px;
-    background-color: lightblue;
+    /* background-color: lightgreen; */
+    background: linear-gradient(to bottom, #a2d5a2 0%, #c7efc7 50%, #a2d5a2 100%);
+    box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.5),
+                inset 0 -2px 4px rgba(0, 0, 0, 0.1);
 }   
 
 /*-------------------------------------------------------------
@@ -79,28 +87,33 @@ h1 {
     box-shadow: 6px 6px 15px rgba(0.12, 0.12, 0.12, 0.12);
 }
 
+#window-top-container {
+    width: 400px;
+    height: 300px;
+}
+
 /*-------------------------------------------------------------
     상단 화면 - 스피커
 -------------------------------------------------------------*/
 #speaker-left, #speaker-right {
-  display: grid;
-  grid-template-columns: repeat(3, 10px);
-  grid-template-rows: repeat(2, 10px);
-  gap: 8px;
-  justify-items: center;
-  align-items: center;
-  margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 10px);
+    grid-template-rows: repeat(2, 10px);
+    gap: 8px;
+    justify-items: center;
+    align-items: center;
+    margin: 20px;
 }
 
 .speaker-circle {
-  width: 10px;
-  height: 10px;
-  background-color: #fff;
-  border-radius: 50%;
-  font-size: 10px;
-  text-align: center;
-  line-height: 10px;
-  color: black;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    font-size: 10px;
+    text-align: center;
+    line-height: 10px;
+    color: black;
 }
 
 /*-------------------------------------------------------------
@@ -114,7 +127,14 @@ h1 {
 #middle-left, #middle-right {
     width: 80px;
     height: 100%;
-    background-color: black;
+}
+
+#middle-left {
+    border-right: 3px solid rgb(197, 197, 197);;
+}
+
+#middle-right {
+    border-left: 3px solid rgb(197, 197, 197);;
 }
 
 #middle-on {
@@ -152,59 +172,72 @@ h1 {
 -------------------------------------------------------------*/
 
 #joy-direction {
-  position: relative;
-  height: 100px;
-  /* margin: 20px; */
+    position: relative;
+    height: 100px;
+    /* margin: 20px; */
 }
 
 .dpad {
-  position: absolute;
-  background-color: #444;
-  border: 2px solid #444;
-  border-radius: 5px;
+    position: absolute;
+    background: #88c475;
+}
+
+.dpad.center {
+    top: 40px;
+    left: 35px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+}
+
+/* 각 방향 버튼들: 중앙에서 튀어나온 듯한 느낌 */
+.dpad.up,
+.dpad.down,
+.dpad.left,
+.dpad.right {
+    position: absolute;
 }
 
 .dpad:active { transform: scale(0.95); } 
 
-.dpad.center {
-  top: 40px;
-  left: 35px;
-  width: 30px;
-  height: 30px;
-  background-color: #444;
-  z-index: 2;
-}
-
 .dpad.up {
-  top: 0;
-  left: 35px;
-  width: 30px;
-  height: 40px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    top: 0;
+    left: 35px;
+    width: 30px;
+    height: 40px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .dpad.down {
-  bottom: -7px;
-  left: 35px;
-  width: 30px;
-  height: 40px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    bottom: -7px;
+    left: 35px;
+    width: 30px;
+    height: 40px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .dpad.left {
-  top: 40px;
-  left: 0;
-  width: 40px;
-  height: 30px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.0);
+    top: 40px;
+    left: 0;
+    width: 40px;
+    height: 30px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.0);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .dpad.right {
-  top: 40px;
-  right: -5px;
-  width: 40px;
-  height: 30px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    top: 40px;
+    right: -5px;
+    width: 40px;
+    height: 30px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 /*-------------------------------------------------------------
@@ -222,18 +255,41 @@ h1 {
 /*-------------------------------------------------------------
     하단 화면 - 우측 컨트롤러 Y, X, A, B
 -------------------------------------------------------------*/
-#joy-abyx > div {
+/* #joy-abyx > div {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-}
+} */
 
 #joy-x, #joy-y, #joy-a, #joy-b {
-    background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: radial-gradient(circle at 30% 30%, #a3e497, #6ca85a);
     box-shadow: 
-        inset -1px -1px 2px rgba(255, 255, 255, 0.6),
-        2px 2px 5px rgba(0, 0, 0, 0.4);
+        -1px -1px 5px #b8efab,  /* 빛이 비치는 밝은 영역 */
+        1px 1px 5px #5c8b4a;     /* 아래쪽의 어두운 그림자 */
+    border: none;
+    cursor: pointer;
+    transition: transform 0.1s ease;
+    /* 텍스트 중앙 정렬 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
 }
+
+/* 버튼 누를 때 눌리는 효과 */
+#joy-x:active, #joy-y:active, #joy-a:active, #joy-b:active {
+  transform: translateY(1px);
+  box-shadow:
+    inset 1px 1px 3px rgba(0, 0, 0, 0.3),
+    inset -1px -1px 2px rgba(255, 255, 255, 0.5);
+}
+
+/* #joy-x:active, #joy-y:active, #joy-a:active, #joy-b:active { transform: scale(0.95); }  */
 
 /*-------------------------------------------------------------
     하단 화면 - 우측 컨트롤러 아래 전원 버튼 (start, select)
@@ -249,10 +305,16 @@ h1 {
 #start, #select {
     width: 50px;
     height: 20px;
-    background-color: white;
+    background-color: #88c475;
+    color: #fff;
     border: none;
     border-radius: 50px;
+    box-shadow:
+     1px 1px 3px rgba(0, 0, 0, 0.3),
+     -1px -1px 2px rgba(255, 255, 255, 0.5);
 }
+
+#start:active, #select:active { transform: scale(0.95); } 
 
 button:focus {
     outline: none;
@@ -312,9 +374,12 @@ button:focus {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 6px;
+
+  width: 100%;
+  height: 100%;
 }
 #game-menu button {
-  font-size: 12px;
+  font-size: 14px;
   padding: 4px;
   border-radius: 6px;
   border: none;
@@ -334,7 +399,7 @@ button:focus {
     position: relative;
 }
 /* 모달 배경 */
-.modal {
+.modal , #diary-modal{
   position: absolute;
   top: 0;
   left: 0;
@@ -393,18 +458,6 @@ button:focus {
   cursor: pointer;
 }
 
-
-/* 닫기 버튼 */
-/* .log-close-btn {
-  position: absolute;
-  top: 10px;
-  right: 14px;
-  background: none;
-  border: none;
-  font-size: 18px;
-  cursor: pointer;
-} */
-
 .log-type-container {
   display: flex;
   justify-content: center;
@@ -417,9 +470,9 @@ button:focus {
   background-color: #ffd6e0;
   border: none;
   border-radius: 12px;
-  padding: 10px 16px;
+  padding: 8px 5px;
   margin: 6px;
-  margin-top: 50px;
+  margin-top: 40px;
   font-size: 13px;
   cursor: pointer;
   transition: background 0.2s;
@@ -430,32 +483,50 @@ button:focus {
 
 /* 이벤트 옵션들 */
 #log-options {
-  margin-top: 12px;
+  /* margin-top: 12px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 300px;
+  /* min-height: 3px; */
   overflow-y: auto;
-  padding: 4px;
+  /* padding: 4px; */
   flex: 1; /* 남은 공간 차지 */
 }
 
 /* 이벤트 옵션들 */
 #log-options .log-option {
-  background-color: #e0f7fa;
-  padding: 6px 12px;        /* 내부 여백 축소 */
-  margin: 3px 0;            /* 요소 간 간격 줄이기 */
-  border-radius: 10px;
-  cursor: pointer;
-  width: 90%;               /* 너비 비율 유지 */
-  text-align: center;
-  font-size: 13px;          /* 글자 크기 소폭 축소 */
-  transition: background-color 0.2s;
-  line-height: 1.2;
+    margin-top: 4px;
+    background-color: #e0f7fa;
+    padding: 6px 12px;        /* 내부 여백 축소 */
+    margin: 3px 0;            /* 요소 간 간격 줄이기 */
+    border-radius: 10px;
+    cursor: pointer;
+    width: 90%;               /* 너비 비율 유지 */
+    text-align: center;
+    font-size: 13px;          /* 글자 크기 소폭 축소 */
+    transition: background-color 0.2s;
+    line-height: 1.2;
 }
 
 #log-options .log-option:hover {
   background-color: #b2ebf2;
+}
+
+/* 일기 textarea */
+#log-etc-input {
+      /* width: 90%; */
+  height: 20%;
+}
+#log-etc-input textarea {
+  width: 90%;
+  height: 60%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  /* margin-top: 10px; */
+  resize: none;
 }
 
 /* 확인 버튼 */
@@ -477,6 +548,50 @@ button:focus {
 
 /* 숨기기 */
 .hidden {
-  display: none;
+  display: none !important;
+  height: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow: hidden !important;
 }
 
+/*-------------------------------------------------------------
+    Button 일기 보기
+-------------------------------------------------------------*/
+/* #diary-modal .modal-content {
+  background-color: #fffef2;
+  width: 100%;
+  max-height: 80%;
+  overflow: hidden;
+  padding: 20px;
+  font-family: "Arial", sans-serif;
+  position: relative;
+} */
+
+#diary-entries {
+  max-height: 240px;
+  overflow-y: auto;
+  text-align: left;
+  margin-top: 10px;
+  padding-right: 10px;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+#diary-entries .entry {
+  background: #e0f7fa;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+
+.modal-header h3{
+  width: 200px;
+}
