--- a/html_workspace/MayProject/css/game.css
+++ b/html_workspace/MayProject/css/game.css
@@ -418,15 +418,13 @@ button:focus {
   width: 100%;
   height: 100%;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  position: relative;
   font-family: "Arial", sans-serif;
   animation: fadeIn 0.3s ease-in-out;
-
   display: flex;
   flex-direction: column;
-  justify-content: space-between;  /* 상단-하단 요소 분리 */
-  /* padding: 16px; */
+  padding: 16px;
+  box-sizing: border-box;
+  gap: 10px; /* 요소 간 여백 */
 }
 
 @keyframes fadeIn {
@@ -462,7 +460,7 @@ button:focus {
   display: flex;
   justify-content: center;
   gap: 10px;
-  /* margin-top: 40px; */
+  margin-top: 10px;
 }
 
 /* 좋은 일/나쁜 일 버튼 */
@@ -483,14 +481,13 @@ button:focus {
 
 /* 이벤트 옵션들 */
 #log-options {
-  /* margin-top: 12px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* min-height: 3px; */
+  flex-grow: 1;
   overflow-y: auto;
-  /* padding: 4px; */
-  flex: 1; /* 남은 공간 차지 */
+  transition: height 0.3s ease;
+  max-height: 160px;
 }
 
 /* 이벤트 옵션들 */
@@ -514,19 +511,22 @@ button:focus {
 
 /* 일기 textarea */
 #log-etc-input {
-      /* width: 90%; */
-  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
 }
+
 #log-etc-input textarea {
-  width: 90%;
-  height: 60%;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  font-family: 'Arial', sans-serif;
-  font-size: 14px;
-  /* margin-top: 10px; */
-  resize: none;
+    width: 90%;
+    height: 100%;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+    /* margin-top: 10px; */
+    resize: none;
 }
 
 /* 확인 버튼 */
@@ -541,12 +541,14 @@ button:focus {
   font-size: 14px;
   align-self: center; /* 가운데 정렬 */
   margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 #log-confirm:hover {
   background-color: #b2f2bb;
 }
 
-/* 숨기기 */
+/* 숨기기: 공간 차지 X */
 .hidden {
   display: none !important;
   height: 0 !important;
@@ -558,15 +560,6 @@ button:focus {
 /*-------------------------------------------------------------
     Button 일기 보기
 -------------------------------------------------------------*/
-/* #diary-modal .modal-content {
-  background-color: #fffef2;
-  width: 100%;
-  max-height: 80%;
-  overflow: hidden;
-  padding: 20px;
-  font-family: "Arial", sans-serif;
-  position: relative;
-} */
 
 #diary-entries {
   max-height: 240px;
